--- a/web/src/app/menu/menu.module.css
+++ b/web/src/app/menu/menu.module.css
@@ -83,3 +83,33 @@
     background-color: #f1f1f1; /* Fondo al hacer hover sobre una fila */
   }
   
+  .form {
+    margin: 20px 0;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+  }
+  
+  .form input {
+    margin-bottom: 10px;
+    padding: 8px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+  }
+  
+  .form button {
+    margin-top: 10px;
+    padding: 10px;
+    border: none;
+    border-radius: 4px;
+    background-color: #007bff;
+    color: white;
+    cursor: pointer;
+  }
+  
+  .form button:last-child {
+    background-color: #6c757d;
+  }
+  
